--- a/hf.ipynb
+++ b/hf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "[4880 rows x 18 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,6 +351,307 @@
     "df = pd.read_parquet(path)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>LastPrice</th>\n",
+       "      <th>TotalBidQty</th>\n",
+       "      <th>WeightedAvgBidPx</th>\n",
+       "      <th>TotalOfferQty</th>\n",
+       "      <th>WeightedAvgOfferPx</th>\n",
+       "      <th>AskPrice1</th>\n",
+       "      <th>AskVolume1</th>\n",
+       "      <th>BidPrice1</th>\n",
+       "      <th>BidVolume1</th>\n",
+       "      <th>AskPrice2</th>\n",
+       "      <th>AskVolume2</th>\n",
+       "      <th>BidPrice2</th>\n",
+       "      <th>BidVolume2</th>\n",
+       "      <th>LogReturn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-04-30 09:30:04</td>\n",
+       "      <td>-2.952853</td>\n",
+       "      <td>1.963909</td>\n",
+       "      <td>0.131896</td>\n",
+       "      <td>3.536634</td>\n",
+       "      <td>-4.343200</td>\n",
+       "      <td>5.265693</td>\n",
+       "      <td>1.798695</td>\n",
+       "      <td>-1.045933</td>\n",
+       "      <td>1.803815</td>\n",
+       "      <td>-0.187644</td>\n",
+       "      <td>1.798277</td>\n",
+       "      <td>-1.177115</td>\n",
+       "      <td>1.804334</td>\n",
+       "      <td>-1.289863</td>\n",
+       "      <td>-0.004334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-04-30 09:30:07</td>\n",
+       "      <td>-2.942334</td>\n",
+       "      <td>1.562792</td>\n",
+       "      <td>-3.308111</td>\n",
+       "      <td>0.594524</td>\n",
+       "      <td>-4.227462</td>\n",
+       "      <td>4.816994</td>\n",
+       "      <td>1.798695</td>\n",
+       "      <td>-1.117476</td>\n",
+       "      <td>1.803815</td>\n",
+       "      <td>0.106545</td>\n",
+       "      <td>1.798277</td>\n",
+       "      <td>-1.133260</td>\n",
+       "      <td>1.804334</td>\n",
+       "      <td>-1.135506</td>\n",
+       "      <td>-0.005414</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  time    Volume  LastPrice  TotalBidQty  WeightedAvgBidPx  \\\n",
+       "1  2024-04-30 09:30:04 -2.952853   1.963909     0.131896          3.536634   \n",
+       "2  2024-04-30 09:30:07 -2.942334   1.562792    -3.308111          0.594524   \n",
+       "\n",
+       "   TotalOfferQty  WeightedAvgOfferPx  AskPrice1  AskVolume1  BidPrice1  \\\n",
+       "1      -4.343200            5.265693   1.798695   -1.045933   1.803815   \n",
+       "2      -4.227462            4.816994   1.798695   -1.117476   1.803815   \n",
+       "\n",
+       "   BidVolume1  AskPrice2  AskVolume2  BidPrice2  BidVolume2  LogReturn  \n",
+       "1   -0.187644   1.798277   -1.177115   1.804334   -1.289863  -0.004334  \n",
+       "2    0.106545   1.798277   -1.133260   1.804334   -1.135506  -0.005414  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_csv(\"Crossformer/datasets/hf.csv\")\n",
+    "df[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>LastPrice</th>\n",
+       "      <th>TotalBidQty</th>\n",
+       "      <th>WeightedAvgBidPx</th>\n",
+       "      <th>TotalOfferQty</th>\n",
+       "      <th>WeightedAvgOfferPx</th>\n",
+       "      <th>AskPrice1</th>\n",
+       "      <th>AskVolume1</th>\n",
+       "      <th>BidPrice1</th>\n",
+       "      <th>BidVolume1</th>\n",
+       "      <th>AskPrice2</th>\n",
+       "      <th>AskVolume2</th>\n",
+       "      <th>BidPrice2</th>\n",
+       "      <th>BidVolume2</th>\n",
+       "      <th>LogReturn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-04-30 09:30:07</td>\n",
+       "      <td>-2.942334</td>\n",
+       "      <td>1.562792</td>\n",
+       "      <td>-3.308111</td>\n",
+       "      <td>0.594524</td>\n",
+       "      <td>-4.227462</td>\n",
+       "      <td>4.816994</td>\n",
+       "      <td>1.798695</td>\n",
+       "      <td>-1.117476</td>\n",
+       "      <td>1.803815</td>\n",
+       "      <td>0.106545</td>\n",
+       "      <td>1.798277</td>\n",
+       "      <td>-1.13326</td>\n",
+       "      <td>1.804334</td>\n",
+       "      <td>-1.135506</td>\n",
+       "      <td>-0.005414</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  time    Volume  LastPrice  TotalBidQty  WeightedAvgBidPx  \\\n",
+       "2  2024-04-30 09:30:07 -2.942334   1.562792    -3.308111          0.594524   \n",
+       "\n",
+       "   TotalOfferQty  WeightedAvgOfferPx  AskPrice1  AskVolume1  BidPrice1  \\\n",
+       "2      -4.227462            4.816994   1.798695   -1.117476   1.803815   \n",
+       "\n",
+       "   BidVolume1  AskPrice2  AskVolume2  BidPrice2  BidVolume2  LogReturn  \n",
+       "2    0.106545   1.798277    -1.13326   1.804334   -1.135506  -0.005414  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[2:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>LastPrice</th>\n",
+       "      <th>TotalBidQty</th>\n",
+       "      <th>WeightedAvgBidPx</th>\n",
+       "      <th>TotalOfferQty</th>\n",
+       "      <th>WeightedAvgOfferPx</th>\n",
+       "      <th>AskPrice1</th>\n",
+       "      <th>AskVolume1</th>\n",
+       "      <th>BidPrice1</th>\n",
+       "      <th>BidVolume1</th>\n",
+       "      <th>AskPrice2</th>\n",
+       "      <th>AskVolume2</th>\n",
+       "      <th>BidPrice2</th>\n",
+       "      <th>BidVolume2</th>\n",
+       "      <th>BuyPrice</th>\n",
+       "      <th>SellPrice</th>\n",
+       "      <th>LogReturn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-04-30 09:30:01</td>\n",
+       "      <td>243100.0</td>\n",
+       "      <td>9.25</td>\n",
+       "      <td>2135800.0</td>\n",
+       "      <td>9.144</td>\n",
+       "      <td>2605600.0</td>\n",
+       "      <td>9.684</td>\n",
+       "      <td>9.25</td>\n",
+       "      <td>6500.0</td>\n",
+       "      <td>9.24</td>\n",
+       "      <td>61100.0</td>\n",
+       "      <td>9.26</td>\n",
+       "      <td>23300.0</td>\n",
+       "      <td>9.23</td>\n",
+       "      <td>5100.0</td>\n",
+       "      <td>9.26</td>\n",
+       "      <td>9.21</td>\n",
+       "      <td>-0.005414</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  time    Volume  LastPrice  TotalBidQty  WeightedAvgBidPx  \\\n",
+       "0  2024-04-30 09:30:01  243100.0       9.25    2135800.0             9.144   \n",
+       "\n",
+       "   TotalOfferQty  WeightedAvgOfferPx  AskPrice1  AskVolume1  BidPrice1  \\\n",
+       "0      2605600.0               9.684       9.25      6500.0       9.24   \n",
+       "\n",
+       "   BidVolume1  AskPrice2  AskVolume2  BidPrice2  BidVolume2  BuyPrice  \\\n",
+       "0     61100.0       9.26     23300.0       9.23      5100.0      9.26   \n",
+       "\n",
+       "   SellPrice  LogReturn  \n",
+       "0       9.21  -0.005414  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
